--- a/css/styles.css
+++ b/css/styles.css
@@ -417,7 +417,9 @@ picture {
   line-height: 1.11;
 }
 
-/* .principles-text {} */
+.principles-text {
+  font-weight: 500;
+}
 
 /* ----- OUR DOING----- */
 
@@ -504,11 +506,12 @@ picture {
 
 .customer-list {
   flex-wrap: wrap;
-  gap: 72px;
-  column-gap: 16px;
+  --gap: 16px;
+  row-gap: 72px;
 }
 
 .customer-item {
+  flex-basis: calc((100% - 16px) / 2);
   width: 100%;
   height: 88px;
 }
@@ -786,13 +789,13 @@ picture {
 
 .modal {
   position: absolute;
-  top: 96px;
+  top: 50%;
   left: 50%;
-  width: 95vw;
+  width: 100%;
   height: auto;
   padding: 72px 16px 24px;
   transition: transform var(--tra);
-  transform: translateX(-50%) scaleY(1);
+  transform: translate(-50%, -50%) scaleY(1);
   border-radius: 4px;
   background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -922,7 +925,7 @@ picture {
     fill var(--tra);
   letter-spacing: 0.04em;
   color: #757575;
-  font-size: 10px;
+  font-size: 12px;
   line-height: 1.33;
   gap: 3px;
 }
